--- a/NeuralGasDotNet/NeuralGasDotNet.csproj
+++ b/NeuralGasDotNet/NeuralGasDotNet.csproj
@@ -36,6 +36,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MathNet.Numerics, Version=3.20.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\MathNet.Numerics.3.20.0\lib\net40\MathNet.Numerics.dll</HintPath>
+    </Reference>
     <Reference Include="netstandard" />
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.2.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -60,6 +63,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Extensions\ArrayExtension.cs" />
+    <Compile Include="Extensions\HashtableExtension.cs" />
+    <Compile Include="Extensions\ListExtension.cs" />
     <Compile Include="Services\NeuralGas\GrowingNeuralGas.cs" />
     <Compile Include="Services\NeuralGas\NetworkInititalizer.cs" />
     <Page Include="MainWindow.xaml">
