--- a/NeuralGasDotNet/packages.config
+++ b/NeuralGasDotNet/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LiveCharts" version="0.9.7" targetFramework="net471" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net471" />
   <package id="MathNet.Numerics" version="3.20.0" targetFramework="net471" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net471" />
 </packages>
