--- a/NeuralGasDotNet/packages.config
+++ b/NeuralGasDotNet/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net471" />
+  <package id="CommonServiceLocator" version="2.0.1" targetFramework="net471" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net471" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net471" />
   <package id="MathNet.Numerics" version="3.20.0" targetFramework="net471" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net471" />
+  <package id="Prism.Core" version="6.3.0" targetFramework="net471" />
+  <package id="Prism.Wpf" version="6.3.0" targetFramework="net471" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net471" />
+  <package id="Unity" version="5.3.2" targetFramework="net471" />
 </packages>
